--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.4.0",
     "bootstrap": "^5.0.2",
     "jquery": "^3.7.0",
@@ -17,8 +18,11 @@
     "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.1.1",
-    "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "react-redux": "^8.0.5",
+    
+    "redux-persist": "^6.0.0",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6"
   }
 }
+
